--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,14 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "preLaunchTask": "C/C++: clang build active file",
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-           // "program": "${workspaceFolder}/${fileBasenameNoExtension}",
-           "program": "/Users/wanghaozheng/Desktop/Edit/OJ/${fileBasenameNoExtension}",
+            // "program": "${workspaceFolder}/${fileBasenameNoExtension}",
+            "program": "${workspaceFolder}/OJ/${fileBasenameNoExtension}",
             "args": [],
             "cwd": "${workspaceFolder}"
         }
